@@ -366,8 +366,7 @@ libspectrum_tape_get_next_edge_internal( libspectrum_dword *tstates,
       break;
 
     case LIBSPECTRUM_TAPE_BLOCK_PAUSE:
-      *tstates = libspectrum_ms_to_tstates( block->types.pause.length );
-      end_of_block = 1;
+      *tstates = block->types.pause.length_tstates; end_of_block = 1;
       /* 0 ms pause => stop tape */
       if( *tstates == 0 ) { *flags |= LIBSPECTRUM_TAPE_FLAGS_STOP; }
       break;
@@ -527,7 +526,7 @@ rom_edge( libspectrum_tape_rom_block *block,
 
   case LIBSPECTRUM_TAPE_STATE_PAUSE:
     /* The pause at the end of the block */
-    *tstates = libspectrum_ms_to_tstates( block->pause );
+    *tstates = block->pause_tstates;
     *end_of_block = 1;
     break;
 
@@ -624,7 +623,7 @@ turbo_edge( libspectrum_tape_turbo_block *block,
 
   case LIBSPECTRUM_TAPE_STATE_PAUSE:
     /* The pause at the end of the block */
-    *tstates = libspectrum_ms_to_tstates( block->pause );
+    *tstates = block->pause_tstates;
     *end_of_block = 1;
     break;
 
@@ -732,7 +731,7 @@ pure_data_edge( libspectrum_tape_pure_data_block *block,
 
   case LIBSPECTRUM_TAPE_STATE_PAUSE:
     /* The pause at the end of the block */
-    *tstates = libspectrum_ms_to_tstates( block->pause );
+    *tstates = block->pause_tstates;
     *end_of_block = 1;
     break;
 
@@ -800,7 +799,7 @@ raw_data_edge( libspectrum_tape_raw_data_block *block,
 
   case LIBSPECTRUM_TAPE_STATE_PAUSE:
     /* The pause at the end of the block */
-    *tstates = libspectrum_ms_to_tstates( block->pause );
+    *tstates = block->pause_tstates;
     *end_of_block = 1;
     break;
 
@@ -960,7 +959,7 @@ generalised_data_edge( libspectrum_tape_generalised_data_block *block,
 
   case LIBSPECTRUM_TAPE_STATE_PAUSE:
     /* The pause at the end of the block */
-    *tstates = libspectrum_ms_to_tstates( block->pause );
+    *tstates = block->pause_tstates;
     *end_of_block = 1;
     break;
 
